--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: mei23/misskey-v11
+          images: lastorderdc/misskey-v11
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
