--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "misskey",
 	"author": "mei23 <m@m544.net>",
-	"version": "11.37.1-20230930181843",
+	"version": "11.37.1-20231008191543",
 	"codename": "daybreak",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/mei23/misskey-v11.git"
+		"url": "https://github.com/Lastorder-DC/misskey-v11.git"
 	},
 	"main": "./index.js",
 	"private": true,
